<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PreciosActivity"
    android:background="#33FF71">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="125dp">
            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_precios"
                android:layout_marginTop="30dp"
                android:padding="3dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PISTAS DE PÁDEL"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/custom_tipo_pista"
                        android:layout_marginLeft="115dp"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="12dp"
                       android:layout_marginTop="15dp"
                       android:textSize="18sp"
                       android:textColor="#000000"
                       android:textStyle="bold"
                       android:text="@string/alquiler_padel_sin_luz"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:text="@string/alquiler_padel_con_luz"/>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_precios"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PISTAS DE TENIS"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/custom_tipo_pista"
                        android:layout_marginLeft="115dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/alquiler_tenis__sin_luz"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="20dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/alquiler_tenis_con_luz"/>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_precios"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PISTAS DE BALONCESTO"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/custom_tipo_pista"
                        android:layout_marginLeft="80dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/alquiler_baloncesto_sin_luz"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/alquiler_baloncesto_con_luz"/>

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="375dp"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:background="@drawable/custom_precios"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PABELLONES"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@drawable/custom_tipo_pista"
                        android:layout_marginLeft="115dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/alquiler_pabellon_sin_luz"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="15dp"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:text="@string/alquiler_pabellon_con_luz"/>

                </LinearLayout>



            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>